[build-system]
requires = ["pip>=22.3.1",
    "setuptools>=66.0.0",
    "wheel>=0.38.4"]

build-backend = "setuptools.build_meta"

[project]
name = "sb_pubsub_kafka"
readme = "README.md"
version = "0.0.6"
authors = [
    { name = "Stephen Booth", email = "stephen.booth.za@gmail.com" },
]
description = "A kafka wrapper"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["confluent-kafka>=2.13.2",
    "sb_serializer>=0.0.3",
    "uuid>=1.30"]
